# RealTimeObjectRecognition

./: CMakeLists.txt  README.md  features.csv
src/: functions.cpp  functions.h  main.cpp
